# Modeling-random-variables-with-a-given-distribution-density

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FixQtPluginPaths.cmake  FixQtSvgFrameworkPaths.cmake  RemoveExternalQtRpaths.cmake
include/: MainWindow.h  PlotChartWidget.h  SamplingEngine.h  SamplingTypes.h  VariantDistribution.h
resources/: qt.conf  resources.qrc
src/: MainWindow.cpp  PlotChartWidget.cpp  SamplingEngine.cpp
